# github-clone

./: .env.dev  .env.template  .env.test  .gitignore  README.md  another-private.pem  another-public.pem  compose.yml  other-private.pem  other-public.pem  policies.yml  pyproject.toml
src/: .env.template  alembic.ini  config.py  main.py  policies.yml
src/alembic/: env.py
src/alembic/versions/: 2026_01_18_0145-080b5bc4d686_add_users_model.py  2026_01_18_0437-09c33cd3f9ca_create_refresh_tokens_model.py  2026_01_20_1036-a94dcf0ab5f9_update_refresh_tokens.py  2026_01_20_1406-18e389cf261d_update_refresh_tokens_add_offset_aware_.py  2026_01_21_1602-50ba0af2312f_smth.py  2026_01_21_1621-4e7010afca13_rename_hashed_password_to_password_hash_.py  2026_01_24_0606-7122db3a117e_add_repositories_model.py
src/api/: __init__.py
src/api/exceptions/: api.py
src/api/utils/: require_field.py
src/api/v1/: __init__.py  auth.py  git.py  repository.py  users.py
src/application/commands/: auth.py  git.py
src/application/ports/: uow.py  use_case.py  user_case.py
src/application/use_cases/: login_user.py  refresh_tokens.py  register_user.py
src/config/: __init__.py  config.py  logging.py
src/core/: config.py
src/core/models/: __init__.py  db_helper.py
src/domain/entities/: git.py  refresh.py  role.py  user.py
src/domain/exceptions/: auth.py  common.py  git.py  refresh_token.py  user.py
src/domain/filters/: git.py  refresh_token.py  user.py
src/domain/ports/: entity.py  filter.py  repository.py  repository_storage.py  (+2 more)
src/infrastructure/: policy_loader.py
src/secrets/: jwt-private.pem.example  jwt-public.pem.example
tests/: conftest.py  utils.py
tests/secrets/: another-private.pem.example  another-public.pem.example  db_password.txt.example  test-private.pem.example  test-public.pem.example
tests/unit/: conftest.py
(+77 files in other folders)
