[project]
name = "github-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.11.0",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "mypy>=1.19.1",
    "pydantic-settings>=2.12.0",
    "pydantic[email,settings]>=2.12.5",
    "ruff>=0.14.13",
    "uvicorn[standard]>=0.40.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.mypy]
strict = true
ignore_missing_imports = true
