[project]
name = "github-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.11.0",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "uvicorn[standard]>=0.40.0",
    "asyncpg>=0.31.0",
    "alembic>=1.18.1",
    "pyjwt[crypto]>=2.10.1",
    "bcrypt>=5.0.0",
    "dependency-injector>=4.48.3",
    "gitpython>=3.1.46",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.mypy]
strict = true
ignore_missing_imports = true


[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | \.mypy_cache
  | \.ruff_cache
  | \.vscode
  | __pycache__
)/
'''

[dependency-groups]
dev = [
    "black>=25.12.0",
    "logger>=1.4",
    "loguru>=0.7.3",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "tests"]
testpaths = ["tests"]
